Refactored total queue work tracking code. Added diagnostic log dump if an invalid percentage is detected.

--- a/VidCoder/View/Main.xaml
+++ b/VidCoder/View/Main.xaml
@@ -2077,7 +2077,7 @@
 							Margin="3 0 0 0"
 							HorizontalAlignment="Right"
 							VerticalAlignment="Center"
-							Text="{Binding ProcessingService.EstimatedTimeRemaining}"
+							Text="{Binding ProcessingService.WorkTracker.EstimatedTimeRemaining}"
 							ToolTip="{x:Static res:CommonRes.QueueEtaToolTip}"
 							Visibility="{Binding ProcessingService.EncodeSpeedDetailsAvailable,
 							                     Converter={StaticResource VisibilityConverter}}" />
